# betterosi

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
betterosi/: __init__.py  descriptor.py  descriptors.json  io.py  osi2mcap.py  osi3trace.py  viewer.py
osi-proto/: osi_mapasamopendrive.proto  synergies_mapasamopendrive.proto
