[build-system]
requires = ["setuptools", "setuptools-scm", "ruff"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["betterosi*"]
namespaces = false


[project]
name = "betterosi"
authors = [
    {name = "ika - RWTH Aachen", email = "michael.schuldes@ika.rwth-aachen.de"},
]
description = "betterosi"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["one", "two"]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    'betterproto2[all]<0.3.0',
    'mcap',
    'mcap-protobuf-support',
    'matplotlib',
    'numpy',
    'typer',
    'tqdm'
]
version = "0.2"

#project.optional-dependencies]
#compile = ['betterproto2_compiler'] #, 'osi3']

[tool.setuptools.package-data]
"betterosi" = [
    "descriptors.json"
]


[project.scripts]
betterosi-viewer = "betterosi.viewer:main"
betterosi-to-mcap = "betterosi.osi2mcap:app"
betterosi-generate-descriptor-json = "betterosi.descriptor:app"

[tool.ruff]
lint.ignore = ["E741", "E701"]
